# internal/model/login.go
@@ -33,4 +33,14 @@ type (
 	Claims struct {
 		UserId int
 	}
+
+	Group struct {
+		Name   string `json:"name"`
+		Weight int    `json:"weight"`
+	}
+
+	RenameGroupBody struct {
+		NameOld string
+		NameNew string
+	}
 )
